# rawclaw

./: .env.docker  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  check_p3.py  docker-compose.yml  package-lock.json  package.json  prisma.config.ts  turbo.json
apps/agent/: package.json  pyproject.toml  requirements.txt
apps/agent/src/: __init__.py  config.py  executor.py  main.py
apps/agent/src/contracts/: __init__.py  chat.py  event.py  health.py  task.py  tool.py
apps/agent/src/graph/: builder.py  executor.py  state.py  tool_adapter.py  tool_executor.py
apps/agent/src/memory/: chroma_memory.py  knowledge_brain.py
apps/agent/src/models/: base.py  router.py
apps/agent/src/models/providers/: anthropic.py  ollama.py
apps/agent/src/provenance/: __init__.py  trace.py
apps/agent/src/sandbox/: __init__.py  sandbox.py  sandbox_config.py
apps/agent/src/tools/: __init__.py  base_tool.py  confirmation_gate.py  mcp_gateway.py  mcp_tool_wrapper.py  provenance.py  registry.py  sandbox.py  skill_loader.py
apps/agent/src/tools/builtin/: __init__.py  datetime_tool.py  fetch_url.py  read_file.py  search_web.py  web_fetch.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: 00-rebuild-overview.md  01-product-vision.md  02-architecture.md  03-monorepo-structure.md  04-core-systems.md  05-data-and-memory.md  06-mcp-and-tools.md  07-tasks-and-agents.md  08-development-workflow.md  11-roadmap.md  (+5 more)
(+118 files in other folders)
