[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rawclaw-agent"
version = "0.1.0"
description = "RawClaw Agent Subsystem"
authors = [
    { name="RawClaw Team", email="team@rawclaw.local" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
